Add: Endpoint Tenant
