# docs/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /
 definitions:
+  dto.CreateTenantDTO:
+    properties:
+      name:
+        type: string
+    type: object
   dto.CreateUserDTO:
     properties:
       email:
@@ -25,11 +30,178 @@ info:
   contact:
     email: reinaldo.saraiva@gmail.com
     name: Reinaldo Saraiva
-  description: API Go with authentication JWT and CRUD
+  description: This is a Go API that provides a Restful interface for managing nftables,
+    a powerful and flexible firewall framework in the Linux kernel.
   termsOfService: http://swagger.io/terms
-  title: API Go
-  version: "1.0"
+  title: NFTABLES API Go
+  version: "0.1"
 paths:
+  /tenants:
+    get:
+      consumes:
+      - application/json
+      description: Get all Tenants
+      parameters:
+      - description: Page
+        in: query
+        name: page
+        type: integer
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Sort
+        in: query
+        name: sort
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.CreateTenantDTO'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all Tenants
+      tags:
+      - Tenants
+    post:
+      consumes:
+      - application/json
+      description: Create Tenants
+      parameters:
+      - description: tenant request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateTenantDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Create a new Tenant
+      tags:
+      - Tenants
+  /tenants/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete Tenant a tenant by ID
+      parameters:
+      - description: tenant id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete Tenant a tenant by ID
+      tags:
+      - Tenants
+    get:
+      consumes:
+      - application/json
+      description: Get a tenant by ID
+      parameters:
+      - description: tenant ID
+        in: path
+        name: ID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.CreateTenantDTO'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+      security:
+      - ApiKeyAuth: []
+      summary: Get a tenant by ID
+      tags:
+      - tenants
+    put:
+      consumes:
+      - application/json
+      description: Update a tenant by ID
+      parameters:
+      - description: tenant id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: tenant request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateTenantDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Update a tenant by ID
+      tags:
+      - Tenants
   /users:
     post:
       consumes:
